testing/stats/outs1/stat_populate_bench_test.out
client/src/temp.java:40: error: class PopulateBench is public, should be declared in a file named PopulateBench.java
public class PopulateBench {
       ^
client/src/PopulateBench.java:53: error: cannot find symbol
		this._filebytes = filebytes;
		    ^
  symbol: variable _filebytes
client/src/PopulateBench.java:80: error: cannot find symbol
							  _filebytes
							  ^
  symbol:   variable _filebytes
  location: class PopulateBench
client/src/PopulateBench.java:143: error: cannot find symbol
		PopulateBench benchmark = new PopulateBench(serverlist, transactions, filecnt, username);
		                                                        ^
  symbol:   variable transactions
  location: class PopulateBench
4 errors
